UPDATE: Increased gap to prevent overlap

--- a/frontend/src/scss/_launchCard.scss
+++ b/frontend/src/scss/_launchCard.scss
@@ -8,12 +8,12 @@
         display: flex;
         flex-direction: column;
         margin-top: 10vh;
+        gap:2rem;
 
         @include for_breakpoint(tablet){
             display: grid;
             margin-top: 0;
             grid-template-columns: 1fr 1fr;
-            gap: 1rem;
 
         }
 
@@ -29,9 +29,11 @@
             text-align: center;
             text-decoration: none;
             width: 60vw;
-            background-color: #FFF;
+            background-color: #{$primaryColor}7f;
+            padding-bottom: .3rem;
+
             backdrop-filter: blur(10px);
-            color: #000;
+            color: #FFF;
             transition: all 0.3s ease-in-out;
     
             @include for_breakpoint(tablet){
@@ -42,9 +44,7 @@
                 min-height: 460px;
                 max-width: 350px;
                 align-items: center;
-                background-color: $transparentbackground;
                 color: #FFF;
-                gap: 1rem;
             }
 
             &:hover {
@@ -95,7 +95,7 @@
                 }
     
                 &:visited {
-                    color: #000;
+                    color: #FFF;
                 }
             }
     
@@ -118,7 +118,7 @@
                 a{
                     font-size: 3.5vw;
                     text-decoration: none;
-                    color: #000;
+                    color: #FFF;
     
                     @include for_breakpoint(tablet){
                         font-size: x-large;
@@ -148,7 +148,6 @@
             overflow: visible;
         }
 
-        
 
         &:nth-of-type(1){
             display: none;
